--- a/sources/img-grid.css
+++ b/sources/img-grid.css
@@ -83,12 +83,36 @@
     width: auto;
 }
 
+/* No thumbnail display */
+.tom_ig .tom_ig--noThumb {
+    display: block;
+    background-color: #eee;
+    text-align: center;
+
+    height: 100%;
+    width: 100%;
+    border-width: 5.25em 5.5em;
+    border-style: solid;
+    border-top-color: #eee;
+    border-bottom-color: #eee;
+    border-left-color: #ddd;
+    border-right-color: #ddd;
+}
+
 
 
 @media only screen and (max-width: 480px) {
     .tom_ig#page-image .txp-list tbody tr {
         width: 140px;
         margin: .66em .33em 0 0;
+    }
+
+    .tom_ig#page-image .txp-list td.thumbnail {
+        height: 112px;
+    }
+
+    .tom_ig .tom_ig--noThumb {
+        border-width: 45px 40px;        
     }
 
 
